syntax = "proto3";

option csharp_namespace = "sample_grpc";

import "google/api/annotations.proto";

package todo;

service ToDo {
  rpc Create (ToDoItemCreateRequest) returns (ToDoItemCreateResponse) {
    option (google.api.http) = {
      post: "/v1/todos",
      body: "*"
    };
  };

  rpc GetById (GetByIdRequest) returns (GetByIdResponse) {
    option (google.api.http) = {
      get: "/v1/todos/{id}"
    };
  };

  rpc GetAll (GetAllRequest) returns (GetAllResponse) {
    option (google.api.http) = {
      get: "/v1/todos"
    };
  };
  
  rpc Update (UpdateRequest) returns (UpdateResponse);
  
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message ToDoItemCreateRequest {
  string title = 1;
  string description = 2;
}

message ToDoItemCreateResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string status = 4;
}

message GetAllRequest {

}

message GetAllResponse {
  repeated GetByIdResponse to_do_items = 1;
}

message UpdateRequest {
  int32 id = 1;
  string status = 2;
}

message UpdateResponse {
  int32 id = 1;
  string status = 2;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  int32 id = 1;
}